# parcel_detecting

parcel_detecting/: CMakeLists.txt  package.xml
parcel_detecting/include/: parcel_yolo.cpp  parcel_yolo.h
parcel_detecting/src/: parcel_main.cpp
parcel_msgs/: CMakeLists.txt  package.xml
parcel_msgs/msg/: parcel_pose.msg
parcel_msgs/srv/: parcel_poses.srv  yolo_poses.srv
yolov5_ros/: CMakeLists.txt  package.xml  parcel_service.py
